fixed the massive linting error in PathManagement.java. Created absolutePath and tests.